src/core/snapshots/context_file_concat__core__file_handler__tests__concatenated_content_absolute_no_tree.snap
---
source: src/core/file_handler.rs
expression: content
---
# CFC Output - Generated: [DATETIME]
# Total files: 2

[ROOT]/src/main.rs
===FILE-START===
fn main() {
    println!("Hello, world!");
}
---FILE-END-----

[ROOT]/README.md
===FILE-START===
This is the main readme.
---FILE-END-----
