src/core/snapshots/context_file_concat__core__file_handler__tests__concatenated_content_handles_empty_selection.snap
---
source: src/core/file_handler.rs
expression: content
---
# CFC Output - Generated: [DATETIME]
# Total files: 0

# DIRECTORY TREE
=====================
[PROJECT_NAME]/
=====================
