src/core/snapshots/context_file_concat__core__file_handler__tests__concatenated_content_handles_file_without_final_newline.snap
---
source: src/core/file_handler.rs
expression: content
---
# CFC Output - Generated: [DATETIME]
# Total files: 2

[PROJECT_NAME]/no_newline.txt
===FILE-START===
Line 1
Line 2
---FILE-END-----

[PROJECT_NAME]/empty.txt
===FILE-START===

---FILE-END-----
