src/core/snapshots/context_file_concat__core__file_handler__tests__concatenated_content_handles_root_path_without_parent.snap
---
source: src/core/file_handler.rs
expression: content
---
# CFC Output - Generated: [DATETIME]
# Total files: 1

[README_PATH]
===FILE-START===
This is the main readme.
---FILE-END-----
