src/core/snapshots/context_file_concat__core__file_handler__tests__concatenated_content_handles_special_path_characters.snap
---
source: src/core/file_handler.rs
expression: content
---
# CFC Output - Generated: [DATETIME]
# Total files: 1

# DIRECTORY TREE
=====================
[PROJECT_NAME]/
└── 📁 Mein Ordner
    └── 📄 Lösung.rs
=====================

[PROJECT_NAME]/Mein Ordner/Lösung.rs
===FILE-START===
pub const ANSWER: i32 = 42;
---FILE-END-----
