src/core/snapshots/context_file_concat__core__file_handler__tests__concatenated_content_skips_directories_in_selection.snap
---
source: src/core/file_handler.rs
expression: content
---
# CFC Output - Generated: [DATETIME]
# Total files: 2

[PROJECT_NAME]/src/main.rs
===FILE-START===
fn main() {
    println!("Hello, world!");
}
---FILE-END-----
