src/core/snapshots/context_file_concat__core__file_handler__tests__concatenated_content_with_tree_ignores.snap
---
source: src/core/file_handler.rs
expression: content
---
# CFC Output - Generated: [DATETIME]
# Total files: 3

# DIRECTORY TREE
=====================
[PROJECT_NAME]/
├── 📁 src
│   └── 📄 main.rs
└── 📄 README.md
=====================

[PROJECT_NAME]/src/main.rs
===FILE-START===
fn main() {
    println!("Hello, world!");
}
---FILE-END-----

[PROJECT_NAME]/README.md
===FILE-START===
This is the main readme.
---FILE-END-----

[PROJECT_NAME]/assets/logo.png
===FILE-START===
[BINARY OR NON-UTF8 FILE - CONTENT SKIPPED]
---FILE-END-----
