src/core/snapshots/context_file_concat__core__file_handler__tests__content_reading_edge_cases.snap
---
source: src/core/file_handler.rs
expression: content
---
# CFC Output - Generated: [DATETIME]
# Total files: 2

[PROJECT_NAME]/huge_file.log
===FILE-START===
[FILE TOO LARGE: 22020096 bytes - CONTENT SKIPPED]
---FILE-END-----

[PROJECT_NAME]/assets/data.bin
===FILE-START===
[BINARY OR NON-UTF8 FILE - CONTENT SKIPPED]
---FILE-END-----
