src/core/snapshots/context_file_concat__core__file_handler__tests__get_preview_handles_corrupted_line.snap
---
source: src/core/file_handler.rs
expression: preview
---
This is a valid line.
[ERROR READING LINE]
